--- a/assets/style/components/_btn.scss
+++ b/assets/style/components/_btn.scss
@@ -11,6 +11,7 @@
       box-shadow: 3px 3px 5px rgba(97, 141, 186, 0.471);
       transform: scale(1.01);
       transition-duration: 0.5s;
+      cursor: pointer;
   }
 
 }
