--- a/assets/style/pages/_index.scss
+++ b/assets/style/pages/_index.scss
@@ -356,6 +356,9 @@ svg.bi.bi-zoom-in {
                 display: grid;
                 grid-template-rows: 1fr 1fr;
                 margin-left: 2%;
+                &--one {
+                    grid-template-rows: 1fr;
+                }
 
                 @include x_smallScreen {
                     font-size: 16px;
@@ -498,14 +501,14 @@ section.bloc .contact__content {
             grid-template-columns: 1fr 1fr;
             row-gap: 1rem;
             column-gap: 5%;
-            padding: 3%;
+            padding: 0 3%;
             justify-items: center;
 
             @include smallScreen {
                 grid-template-columns: 1fr;
                 grid-auto-flow: row;
                 row-gap: 0.5rem;
-                padding: 5% 2%;
+                padding: 0% 2%;
 
             }
 
@@ -513,6 +516,7 @@ section.bloc .contact__content {
                 border:rgba(132, 181, 218, 0.524) solid 2px;;
                 background-color: $white_op;
                 grid-column: 1;
+                padding-left: .5rem;
 
                 @include smallScreen {
                     grid-column: 1;
@@ -524,6 +528,7 @@ section.bloc .contact__content {
                 background-color: $white_op;
                 grid-column: 2;
                 grid-row: 1/4;
+                padding-left: .5rem;
 
                 @include smallScreen {
                     grid-column: 1;
