--- a/assets/style/components/_modal.scss
+++ b/assets/style/components/_modal.scss
@@ -14,30 +14,38 @@
 
 /* Modal Content */
 .modal-content {
-    background-color: #fefefe;
     margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 60%;
+    padding: 0;
+    max-width: 80%;
+    max-height: 70%;
     display: grid;
-    row-gap: 1rem;
+    row-gap: .5rem;
     text-align: justify;
     place-content: center;
     @include smallScreen() {
         width: 90%;  
+        max-width: 90%;
+        max-height: 90%;
     }
     img {
         width: 95%;
         justify-self: center;
+        @include smallScreen() {
+            width: 90%;  
+        }
     }
 }
 
 /* The Close Button */
 .close {
     color: #aaaaaa;
-    float: right;
-    font-size: 28px;
+    text-align: right;
+    font-size: 2.2rem;
     font-weight: bold;
+    background-color: white;
+    padding: .5rem;
+    width: 85%;  
+    justify-self: center;
 }
 
 .close:hover,
