--- a/assets/style/layout/_reusable.scss
+++ b/assets/style/layout/_reusable.scss
@@ -81,15 +81,25 @@ section.bloc--smallMargin{
 
 
 h5 {
-    font-size: 1.3em;
+    font-size: 1.5em;
     letter-spacing: 1px;
     font-weight: bold;
     margin: 1em 0%;
     color: $dark_blue;
    
-    @include smallScreen{
-        font-size: 1.1em;
-     }
+    @include smallScreen {
+        font-size: 1.2em;
+    }
+}
+
+h6 {
+    font-family: sans-serif;
+    font-weight: 100;
+    font-size: 1.1rem;
+    margin: 1rem;
+    @include smallScreen {
+        font-size: .9rem;
+    }
 }
 
 /// p
