--- a/assets/style/components/_modal.scss
+++ b/assets/style/components/_modal.scss
@@ -2,50 +2,58 @@
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 99; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
-    height: 100%; /* Full height */
+    height: 100vh; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modalBtn:hover {
+    cursor: pointer;
 }
 
 /* Modal Content */
 .modal-content {
     margin: auto;
     padding: 0;
-    max-width: 80%;
-    max-height: 70%;
+    max-width: 100%;
+    max-height: 100%;
     display: grid;
-    row-gap: .5rem;
+    row-gap: .1rem;
     text-align: justify;
     place-content: center;
-    @include smallScreen() {
-        width: 90%;  
-        max-width: 90%;
-        max-height: 90%;
+    @include smallScreen() { 
+        row-gap: .3rem;
     }
     img {
-        width: 95%;
+        max-height: 90%;
+        object-fit: cover;
         justify-self: center;
+        max-width: 97%; 
         @include smallScreen() {
-            width: 90%;  
+            max-height: 97%;  
         }
     }
 }
 
 /* The Close Button */
 .close {
-    color: #aaaaaa;
-    text-align: right;
+    color: #606060;
+    display: flex;
+    width: fit-content;
+    border: outset;
+    padding: 0 .5rem;
+    justify-self: right;
     font-size: 2.2rem;
     font-weight: bold;
-    background-color: white;
-    padding: .5rem;
-    width: 85%;  
-    justify-self: center;
+    background-color: rgba(255, 255, 255, 0.97);
+    @include smallScreen() {
+        font-size: 1.5rem;  
+    }
+    
 }
 
 .close:hover,
